# keyzen

./: Cargo.toml  README.md  flake.nix  install.sh
src/: crossterm.rs  game.rs  lang.rs  main.rs  tui.rs
