[package]
name = "keyzen"
version = "0.1.3"
edition = "2021"
authors = ["Akshit Vig <akshitvig48@gmail.com>"]
description = "A terminal-based typing test game written in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/akshitvigg/keyzen"
homepage = "https://github.com/akshitvigg/keyzen"  
keywords = ["typing", "cli", "game", "terminal"]
categories = ["command-line-utilities", "games"]

[dependencies]
rand = "0.8"
clap = { version = "4.5.45", features = ["derive"] }
crossterm = "0.29.0"
serde_json = "1.0"
rodio = "0.17"
